# dcr

./: AGENT.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml
docs/: SUMMARY.md
docs/commands/: dcr-add.md
docs/configuration/: dependencies-section.md  package-section.md
docs/dependencies-and-build/: dependency-format.md
docs/reference-and-help/: cli-reference.md
src/: main.rs
src/cli/: add.rs  build.rs  gen.rs  mod.rs  setup.rs
src/core/: config.rs  mod.rs  registry.rs  runner.rs
src/core/builder/: common.rs  gas.rs  mod.rs  msvc.rs  nasm.rs  unix_cc.rs
src/platform/: linux.rs
tests/: cli_basic.rs
