[package]
name = "dcr"
version = "0.6.0"
edition = "2024"
build = "build.rs"

[dependencies]
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
self-replace = "1"
sha2 = "0.10"
toml = "1.0.3"
indicatif = "0.18.4"
console = "0.16.3"
git2 = "0.20.4"
